# DispatchPulse

./: .gitignore  CLAUDE.md  Dockerfile  README.md  __init__.py  baseline_results.json  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  reward.py  scenario_loader.py  simulation.py  task_definitions.py  text_view.py  utils.py
.claude/: settings.json
.claude/commands/: fix-phase2.md  status.md
.claude/skills/dispatchpulse/: SKILL.md
scripts/: validate-submission.sh
server/: __init__.py  app.py  dispatchpulse_environment.py  environment.py
tasks/: easy.yaml  hard.yaml  medium.yaml
tests/: test_reward.py  test_simulation.py
