[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dispatchpulse"
version = "1.0.0"
description = "DispatchPulse: an OpenEnv environment where an AI agent acts as an emergency dispatch coordinator. Reward uses real clinical survival curves."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Arun Sanjay" },
]
keywords = ["openenv", "rl", "emergency-dispatch", "real-world", "healthcare"]
license = { text = "Apache-2.0" }
dependencies = [
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git@v0.2.3",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
py-modules = [
    "client",
    "grader",
    "inference",
    "models",
    "reward",
    "scenario_loader",
    "simulation",
    "task_definitions",
    "text_view",
    "utils",
]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["tasks/*.yaml"]
